--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -1,9 +1,9 @@
-.item.video-item {
+.video-item {
   display: flex !important;
   align-items: center !important;
   cursor: pointer;
 }
 
-.item.ui.image img {
+img.ui.image {
   max-width: 180px;
 }
